Refactorized code and added options to network chart

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -38,6 +38,12 @@ CUM_LINE.yAxisTitle = Registres
 
 Days = Dies
 
+FORUM_BAR = Bars
+
+FORUM_NETWORK = Graph
+
+FORUM_TABLE = Table
+
 GRADE_REPORT_TABLE = Graus
 
 GROUP_BOXPLOT = Boxplot de Grups
@@ -232,6 +238,8 @@ header.passwordDateTime         = Contrasenya de data anterior:
 header.passwordIncorrectMessage = Contrasenya incorrecta
 
 horizontalMode = la manera horitzontal
+
+info.courseexported = Course archived, available in offline mode.
 
 information = Information
 
@@ -837,6 +845,8 @@ module.workshop        = Taller
 
 moreMax = M\u00E0xim
 
+notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
+
 passGradeColor = Passant el color de grau
 
 secondInterval = segon interval
@@ -847,7 +857,7 @@ tab.component            = Components
 tab.coursemodule         = M\u00F2duls del curs
 tab.enrolleduser         = Enrolled
 tab.event                = Esdeveniments
-tab.forum                = Forum
+tab.forum                = Forums
 tab.grades               = Graus
 tab.logs                 = Registres
 tab.noenrolleduser       = Not enrolled
@@ -870,6 +880,8 @@ text.confirmation        = Confirmation
 text.confirmationtext    = Are you sure to remove the cache of the selected course?
 text.coursedata          = Course data
 text.coursemodule        = Course Module
+text.coursename          = Archive course
+text.coursenametextfield = Archived filename
 text.datetime            = Date and time
 text.days                = Dies
 text.empty               = N.A
@@ -897,6 +909,7 @@ text.nousers             = Sense coincid\u00E8ncies
 text.online_false        = Mode: Offline
 text.online_true         = Mode: Online
 text.origin              = Origin
+text.override            = Do you want to overwrite the existing file?
 text.pass                = Pass
 text.past                = Past
 text.previouscache       = Previous courses
