--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -38,6 +38,12 @@ CUM_LINE.yAxisTitle = Logs
 
 Days = Tage
 
+FORUM_BAR = Bars
+
+FORUM_NETWORK = Graph
+
+FORUM_TABLE = Table
+
 GRADE_REPORT_TABLE = Noten
 
 GROUP_BOXPLOT = Gruppen-Boxplot
@@ -232,6 +238,8 @@ header.passwordDateTime         = Passwort f\u00FCr das vorherige Datum:
 header.passwordIncorrectMessage = Falsches Passwort
 
 horizontalMode = Horizontal-Modus
+
+info.courseexported = Course archived, available in offline mode.
 
 information = Information
 
@@ -837,6 +845,8 @@ module.workshop        = Werkstatt
 
 moreMax = Maximal
 
+notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
+
 passGradeColor = Passing Grad Farbe
 
 secondInterval = Sekunden-Intervall
@@ -847,7 +857,7 @@ tab.component            = Komponenten
 tab.coursemodule         = Kursmodule
 tab.enrolleduser         = Enrolled
 tab.event                = Veranstaltungen
-tab.forum                = Forum
+tab.forum                = Forums
 tab.grades               = Noten
 tab.logs                 = Protokolle
 tab.noenrolleduser       = Not enrolled
@@ -870,6 +880,8 @@ text.confirmation        = Confirmation
 text.confirmationtext    = Are you sure to remove the cache of the selected course?
 text.coursedata          = Course data
 text.coursemodule        = Course Module
+text.coursename          = Archive course
+text.coursenametextfield = Archived filename
 text.datetime            = Date and time
 text.days                = Tage
 text.empty               = N.A
@@ -897,6 +909,7 @@ text.nousers             = Kein Zufall
 text.online_false        = Mode: Offline
 text.online_true         = Mode: Online
 text.origin              = Origin
+text.override            = Do you want to overwrite the existing file?
 text.pass                = Pass
 text.past                = Past
 text.previouscache       = Previous courses
