--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -38,6 +38,12 @@ CUM_LINE.yAxisTitle = Logs
 
 Days = Days
 
+FORUM_BAR = Bars
+
+FORUM_NETWORK = Graph
+
+FORUM_TABLE = Table
+
 GRADE_REPORT_TABLE = Grades
 
 GROUP_BOXPLOT = Group BoxPlot
@@ -304,6 +310,8 @@ header.passwordDateTime         = Previous date password:
 header.passwordIncorrectMessage = Password incorrect
 
 horizontalMode = Horizontal mode
+
+info.courseexported = Course archived, available in offline mode.
 
 information = Information
 
@@ -909,6 +917,8 @@ module.workshop        = Workshop
 
 moreMax = Maximum
 
+notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
+
 passGradeColor = Passing grade color
 
 secondInterval = Second interval
@@ -919,7 +929,7 @@ tab.component            = Components
 tab.coursemodule         = Course Modules
 tab.enrolleduser         = Enrolled
 tab.event                = Events
-tab.forum                = Forum
+tab.forum                = Forums
 tab.grades               = Grades
 tab.logs                 = Logs
 tab.noenrolleduser       = Not enrolled
@@ -942,6 +952,8 @@ text.confirmation        = Confirmation
 text.confirmationtext    = Are you sure to remove the cache of the selected course?
 text.coursedata          = Course data
 text.coursemodule        = Course Module
+text.coursename          = Archive course
+text.coursenametextfield = Archived filename
 text.datetime            = Date and time
 text.days                = Days
 text.empty               = N.A
@@ -969,6 +981,7 @@ text.nousers             = No coincidences
 text.online_false        = Mode: Offline
 text.online_true         = Mode: Online
 text.origin              = Origin
+text.override            = Do you want to overwrite the existing file?
 text.pass                = Pass
 text.past                = Past
 text.previouscache       = Previous courses
