--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -38,6 +38,12 @@ CUM_LINE.yAxisTitle = Registros
 
 Days = d\u00EDas
 
+FORUM_BAR = Barras
+
+FORUM_NETWORK = Grafo
+
+FORUM_TABLE = Tabla
+
 GRADE_REPORT_TABLE = Calificaciones
 
 GROUP_BOXPLOT = BoxPlot de Grupos
@@ -304,6 +310,8 @@ header.passwordDateTime         = Fecha de la contrase\u00F1a antigua:
 header.passwordIncorrectMessage = Contrase\u00F1a incorrecta
 
 horizontalMode = Modo horizontal
+
+info.courseexported = Curso archivado, disponible en modo sin conexi\u00F3n.
 
 information = Informaci\u00F3n
 
@@ -909,6 +917,8 @@ module.workshop        = Taller
 
 moreMax = M\u00E1ximo
 
+notificationLoginSSO = Inicio de sesi\u00F3n con autenticaci\u00F3n Single Sign-On (SSO) usando credenciales previas para encriptar/desencriptar cach\u00E9.
+
 passGradeColor = Color de calificaci\u00F3n aprobada
 
 secondInterval = Segundo intervalo
@@ -919,7 +929,7 @@ tab.component            = Componentes
 tab.coursemodule         = M\u00F3dulos curso
 tab.enrolleduser         = Matriculados
 tab.event                = Eventos
-tab.forum                = Foro
+tab.forum                = Foros
 tab.grades               = Calificaciones
 tab.logs                 = Registros
 tab.noenrolleduser       = No matriculados
@@ -942,6 +952,8 @@ text.confirmation        = Confirmaci\u00F3n
 text.confirmationtext    = \u00BFEstas seguro de borrar la cach\u00E9 del curso seleccionado?
 text.coursedata          = Datos del curso
 text.coursemodule        = M\u00F3dulo del curso
+text.coursename          = Archivar curso
+text.coursenametextfield = Nombre de fichero a archivar
 text.datetime            = Fecha y hora
 text.days                = d\u00EDas
 text.empty               = S.C
@@ -969,6 +981,7 @@ text.nousers             = No hay coincidencias
 text.online_false        = Modo: Offline
 text.online_true         = Modo: Online
 text.origin              = Origen
+text.override            = \u00BFQuiere sobrescribir el fichero ya existente?
 text.pass                = Aprobado
 text.past                = Pasados
 text.previouscache       = Cursos previos
