--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -38,6 +38,12 @@ CUM_LINE.yAxisTitle = Journaux
 
 Days = Journ\u00E9es
 
+FORUM_BAR = Bars
+
+FORUM_NETWORK = Graph
+
+FORUM_TABLE = Table
+
 GRADE_REPORT_TABLE = Grades
 
 GROUP_BOXPLOT = Boxplot de Groupe
@@ -232,6 +238,8 @@ header.passwordDateTime         = Date pr\u00E9c\u00E9dente mot de passe:
 header.passwordIncorrectMessage = Mot de passe incorrect
 
 horizontalMode = mode horizontal
+
+info.courseexported = Course archived, available in offline mode.
 
 information = Information
 
@@ -837,6 +845,8 @@ module.workshop        = Atelier
 
 moreMax = Maximum
 
+notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
+
 passGradeColor = En passant la couleur de qualit\u00E9
 
 secondInterval = deuxi\u00E8me intervalle
@@ -847,7 +857,7 @@ tab.component            = Composants
 tab.coursemodule         = Modules de cours
 tab.enrolleduser         = Enrolled
 tab.event                = \u00C9v\u00E9nements
-tab.forum                = Forum
+tab.forum                = Forums
 tab.grades               = Les notes
 tab.logs                 = Les journaux
 tab.noenrolleduser       = Not enrolled
@@ -870,6 +880,8 @@ text.confirmation        = Confirmation
 text.confirmationtext    = Are you sure to remove the cache of the selected course?
 text.coursedata          = Course data
 text.coursemodule        = Course Module
+text.coursename          = Archive course
+text.coursenametextfield = Archived filename
 text.datetime            = Date and time
 text.days                = Journ\u00E9es
 text.empty               = N.A
@@ -897,6 +909,7 @@ text.nousers             = Pas de co\u00EFncidences
 text.online_false        = Mode: Offline
 text.online_true         = Mode: Online
 text.origin              = Origin
+text.override            = Do you want to overwrite the existing file?
 text.pass                = Pass
 text.past                = Past
 text.previouscache       = Previous courses
