--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -38,6 +38,12 @@ CUM_LINE.yAxisTitle = Logs
 
 Days = giorni
 
+FORUM_BAR = Bars
+
+FORUM_NETWORK = Graph
+
+FORUM_TABLE = Table
+
 GRADE_REPORT_TABLE = Gradi
 
 GROUP_BOXPLOT = Diagramma di Gruppo
@@ -232,6 +238,8 @@ header.passwordDateTime         = Data precedente password:
 header.passwordIncorrectMessage = Password non corretta
 
 horizontalMode = modalit\u00E0 orizzontale
+
+info.courseexported = Course archived, available in offline mode.
 
 information = Information
 
@@ -837,6 +845,8 @@ module.workshop        = laboratorio
 
 moreMax = Massimo
 
+notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
+
 passGradeColor = Passando colore grade
 
 secondInterval = Secondo intervallo
@@ -847,7 +857,7 @@ tab.component            = componenti
 tab.coursemodule         = Moduli del corso
 tab.enrolleduser         = Enrolled
 tab.event                = eventi
-tab.forum                = Forum
+tab.forum                = Forums
 tab.grades               = gradi
 tab.logs                 = logs
 tab.noenrolleduser       = Not enrolled
@@ -870,6 +880,8 @@ text.confirmation        = Confirmation
 text.confirmationtext    = Are you sure to remove the cache of the selected course?
 text.coursedata          = Course data
 text.coursemodule        = Course Module
+text.coursename          = Archive course
+text.coursenametextfield = Archived filename
 text.datetime            = Date and time
 text.days                = giorni
 text.empty               = N.A
@@ -897,6 +909,7 @@ text.nousers             = Nessuna coincidenza
 text.online_false        = Mode: Offline
 text.online_true         = Mode: Online
 text.origin              = Origin
+text.override            = Do you want to overwrite the existing file?
 text.pass                = Pass
 text.past                = Past
 text.previouscache       = Previous courses
