--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -38,6 +38,12 @@ CUM_LINE.yAxisTitle = Hist\u00F3rico
 
 Days = Dias
 
+FORUM_BAR = Bars
+
+FORUM_NETWORK = Graph
+
+FORUM_TABLE = Table
+
 GRADE_REPORT_TABLE = Notas
 
 GROUP_BOXPLOT = Boxplot do Grupo
@@ -232,6 +238,8 @@ header.passwordDateTime         = Senha da data anterior:
 header.passwordIncorrectMessage = Senha incorreta
 
 horizontalMode = modo horizontal
+
+info.courseexported = Course archived, available in offline mode.
 
 information = Information
 
@@ -837,6 +845,8 @@ module.workshop        = Oficina
 
 moreMax = M\u00E1ximo
 
+notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
+
 passGradeColor = Passando cor grau
 
 secondInterval = Segundo intervalo
@@ -847,7 +857,7 @@ tab.component            = Componentes
 tab.coursemodule         = M\u00F3dulos do curso
 tab.enrolleduser         = Enrolled
 tab.event                = Eventos
-tab.forum                = Forum
+tab.forum                = Forums
 tab.grades               = Notas
 tab.logs                 = Logs
 tab.noenrolleduser       = Not enrolled
@@ -870,6 +880,8 @@ text.confirmation        = Confirmation
 text.confirmationtext    = Are you sure to remove the cache of the selected course?
 text.coursedata          = Course data
 text.coursemodule        = Course Module
+text.coursename          = Archive course
+text.coursenametextfield = Archived filename
 text.datetime            = Date and time
 text.days                = Dias
 text.empty               = N.A
@@ -897,6 +909,7 @@ text.nousers             = Sem coincid\u00EAncias
 text.online_false        = Mode: Offline
 text.online_true         = Mode: Online
 text.origin              = Origin
+text.override            = Do you want to overwrite the existing file?
 text.pass                = Pass
 text.past                = Past
 text.previouscache       = Previous courses
