--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1,6 +1,8 @@
 
 ACTIVITIES_TABLE = Finalizaci\u00F3n Actividad
 
+BARNES_HUT = Barnes Hut
+
 BOXPLOT = Boxplot
 
 BOXPLOT.xAxisTitle          = \u00CDtems de calificaci\u00F3n
@@ -38,7 +40,12 @@ CUM_LINE.yAxisTitle = Registros
 
 Days = d\u00EDas
 
+FORCE_ATLAS_2_BASED = Force Atlas 2
+
 FORUM_BAR = Barras
+
+FORUM_BAR.xAxisTitle = Posts
+FORUM_BAR.yAxisTitle = Foros
 
 FORUM_NETWORK = Grafo
 
@@ -65,6 +72,8 @@ MEAN_DIFF.xAxisTitle = {0}
 MEAN_DIFF.yAxisTitle = Registros
 
 RADAR = Radar
+
+REPULSION = Repulsi\u00F3n
 
 RISK_BAR = Riesgo comparado
 
@@ -263,6 +272,10 @@ displayXScaleTitle = T\u00EDtulo del eje X
 
 displayYScaleTitle = T\u00EDtulo del eje Y
 
+edges.dashes      = Aristas -> Guiones
+edges.scaling.max = Aristas -> Escalado -> M\u00E1x.
+edges.scaling.min = Aristas -> Escalado -> M\u00EDn.
+
 emptyGradeColor = Color de calificaci\u00F3n vac\u00EDa
 
 error = Error
@@ -322,6 +335,11 @@ initialLastActivity = \u00DAltimas conexiones
 initialRoles = Roles Iniciales
 
 initialTypeTimes = Unidad de tiempo predeterminado
+
+interaction.keyboard          = Interacci\u00F3n -> Teclado
+interaction.multiselect       = Interacci\u00F3n -> Multiselecci\u00F3n
+interaction.navigationButtons = Interaction -> Botones de navegaci\u00F3n
+interaction.tooltipDelay      = Interacci\u00F3n -> Retardo tooltip
 
 label.activities                  = # items de finalizaci\u00F3n de actividad
 label.categoryitem                = Categor\u00EDa/Item:
@@ -383,6 +401,9 @@ label.user                        = Usuario:
 label.welcome                     = Bienvenida/o
 label.withcompletion              = Act. Complet.
 label.withhidden                  = Con ocultos
+
+layout.clusterThreshold = Dise\u00F1o -> Umbral de cluster
+layout.randomSeed       = Dise\u00F1o -> Semilla aleatoria
 
 legendActive = Leyenda del gr\u00E1fico
 
@@ -917,9 +938,37 @@ module.workshop        = Taller
 
 moreMax = M\u00E1ximo
 
+nodes.borderWidth = Nodos -> 
+nodes.scaling.max = Nodos -> Escalado -> M\u00E1x.
+nodes.scaling.min = Nodos -> Escalado -> M\u00EDn.
+
 notificationLoginSSO = Inicio de sesi\u00F3n con autenticaci\u00F3n Single Sign-On (SSO) usando credenciales previas para encriptar/desencriptar cach\u00E9.
 
 passGradeColor = Color de calificaci\u00F3n aprobada
+
+physics.barnesHut.avoidOverlap                 = F\u00EDsica -> Barnes Hut -> Evitar solapamiento [0.0, 1.0]
+physics.barnesHut.centralGravity               = F\u00EDsica -> Barnes Hut -> Gravedad central
+physics.barnesHut.damping                      = F\u00EDsica -> Barnes Hut -> Evitar solapamiento [0.0, 1.0]
+physics.barnesHut.gravitationalConstant        = F\u00EDsica -> Barnes Hut -> Constante gravitacional
+physics.barnesHut.springConstant               = Physics -> Barnes hut ->  Constante del muelle
+physics.barnesHut.springLength                 = F\u00EDsica -> Barnes Hut -> Longitud del muelle
+physics.barnesHut.theta                        = F\u00EDsica -> Barnes Hut -> Theta
+physics.forceAtlas2Based.avoidOverlap          = F\u00EDsica -> Force Atlas 2 -> Evitar solapamiento [0.0, 1.0]
+physics.forceAtlas2Based.centralGravity        = F\u00EDsica -> Force Atlas 2 -> Gravedad central
+physics.forceAtlas2Based.damping               = F\u00EDsica -> Force Atlas 2 -> Evitar solapamiento [0.0, 1.0]
+physics.forceAtlas2Based.gravitationalConstant = F\u00EDsica -> Force Atlas 2 -> Constante gravitacional
+physics.forceAtlas2Based.springConstant        = Physics -> Force Atlas 2 -> Constante del muelle
+physics.forceAtlas2Based.springLength          = F\u00EDsica -> Force Atlas 2 -> Longitud del muelle
+physics.forceAtlas2Based.theta                 = F\u00EDsica -> Force Atlas 2 -> Theta
+physics.repulsion.centralGravity               = F\u00EDsica -> Repulsi\u00F3n -> Gravedad central
+physics.repulsion.damping                      = F\u00EDsica -> Repulsi\u00F3n -> Evitar solapamiento [0.0, 1.0]
+physics.repulsion.nodeDistance                 = Physics -> Repulsi\u00F3n -> Distancia del nodo
+physics.repulsion.springConstant               = Physics -> Repulsi\u00F3n ->  Constante del muelle
+physics.repulsion.springLength                 = F\u00EDsica -> Repulsi\u00F3n -> Longitud del muelle
+physics.solver                                 = F\u00EDsica -> Algoritmo
+physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Constante del muelle
+
+physicsAfterDraw = Habilitar la f\u00EDsica despu\u00E9s de dibujar\r\n
 
 secondInterval = Segundo intervalo
 
@@ -938,6 +987,7 @@ tab.section              = Secci\u00F3n
 tab.visualization        = An\u00E1lisis visual
 
 tabs.ACTIVITY_COMPLETION = An\u00E1lisis visual - Actividades finalizadas
+tabs.FORUM               = Foros
 tabs.GRADES              = An\u00E1lisis visual - Calificaciones
 tabs.LOGS                = An\u00E1lisis visual - Registros
 tabs.RISK                = Riesgo de abandono
@@ -1015,6 +1065,8 @@ tooltip.lastconnection   = \u00DAltimo acceso
 tooltip.rol              = Rol
 
 tooltipDecimals = Informaci\u00F3n de decimales
+
+usePhoto = Usar fotos
 
 useQuartile = Con cuartiles
 
