--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -1,6 +1,8 @@
 
 ACTIVITIES_TABLE = Conclus\u00E3o das atividades
 
+BARNES_HUT = Barnes Hut
+
 BOXPLOT = Boxplot
 
 BOXPLOT.xAxisTitle          = Artigos da categoria
@@ -38,7 +40,12 @@ CUM_LINE.yAxisTitle = Hist\u00F3rico
 
 Days = Dias
 
+FORCE_ATLAS_2_BASED = Force Atlas 2
+
 FORUM_BAR = Bars
+
+FORUM_BAR.xAxisTitle = Forums
+FORUM_BAR.yAxisTitle = Forums
 
 FORUM_NETWORK = Graph
 
@@ -65,6 +72,8 @@ MEAN_DIFF.xAxisTitle = {0}
 MEAN_DIFF.yAxisTitle = Hist\u00F3rico
 
 RADAR = Radar
+
+REPULSION = Repulsion
 
 RISK_BAR = Compared risk
 
@@ -191,6 +200,10 @@ displayXScaleTitle = T\u00EDtulo X eixo
 
 displayYScaleTitle = T\u00EDtulo do eixo Y
 
+edges.dashes      = Edges -> Dashes
+edges.scaling.max = Edges -> Scaling -> Max
+edges.scaling.min = Edges -> Scaling -> Min
+
 emptyGradeColor = Cor grau vazia
 
 error = Error
@@ -250,6 +263,11 @@ initialLastActivity = \u00FAltimos conex\u00F5es
 initialRoles = Roles iniciais
 
 initialTypeTimes = unidade de tempo padr\u00E3o
+
+interaction.keyboard          = Interaction -> Keyboard
+interaction.multiselect       = Interaction -> Multiselect
+interaction.navigationButtons = Interaction -> Navigation buttons
+interaction.tooltipDelay      = Interaction -> Tooltip delay
 
 label.activities                  = # activity completion items
 label.categoryitem                = Categoria / Item:
@@ -311,6 +329,9 @@ label.user                        = Usu\u00E1rio:
 label.welcome                     = Bem vinda
 label.withcompletion              = Completed Act.
 label.withhidden                  = Com oculto\r\n\r\n\r\n
+
+layout.clusterThreshold = Layout -> Cluster threshold
+layout.randomSeed       = Layout -> Random seed
 
 legendActive = Legenda do gr\u00E1fico
 
@@ -845,9 +866,37 @@ module.workshop        = Oficina
 
 moreMax = M\u00E1ximo
 
+nodes.borderWidth = Nodes -> Border width
+nodes.scaling.max = Nodes -> Scaling -> Max
+nodes.scaling.min = Nodes -> Scaling -> Min
+
 notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
 
 passGradeColor = Passando cor grau
+
+physics.barnesHut.avoidOverlap                 = Physics -> Barnes Hut -> Avoid overlap [0.0, 1.0]
+physics.barnesHut.centralGravity               = Physics -> Barnes Hut -> Central gravity
+physics.barnesHut.damping                      = Physics -> Barnes Hut -> Avoid overlap [0.0, 1.0]
+physics.barnesHut.gravitationalConstant        = Physics -> Barnes Hut -> Gravitational constant
+physics.barnesHut.springConstant               = Physics -> Barnes hut -> Spring constant
+physics.barnesHut.springLength                 = Physics -> Barnes Hut -> Spring length
+physics.barnesHut.theta                        = Physics -> Barnes Hut -> Theta
+physics.forceAtlas2Based.avoidOverlap          = Physics -> Force Atlas 2 -> Avoid overlap [0.0, 1.0]
+physics.forceAtlas2Based.centralGravity        = Physics -> Force Atlas 2 -> Central gravity
+physics.forceAtlas2Based.damping               = Physics -> Force Atlas 2 -> Avoid overlap [0.0, 1.0]
+physics.forceAtlas2Based.gravitationalConstant = Physics -> Force Atlas 2 -> Gravitational constant
+physics.forceAtlas2Based.springConstant        = Physics -> Force Atlas 2 -> Spring constant
+physics.forceAtlas2Based.springLength          = Physics -> Force Atlas 2 -> Spring length
+physics.forceAtlas2Based.theta                 = Physics -> Force Atlas 2 -> Theta
+physics.repulsion.centralGravity               = Physics -> Repulsion -> Central gravity
+physics.repulsion.damping                      = Physics -> Repulsion -> Avoid overlap [0.0, 1.0]
+physics.repulsion.nodeDistance                 = Physics -> Repulsion -> Node distance
+physics.repulsion.springConstant               = Physics -> Repulsion -> Spring constant
+physics.repulsion.springLength                 = Physics -> Repulsion -> Spring length
+physics.solver                                 = Physics -> Solver
+physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Spring constant
+
+physicsAfterDraw = Enable physics after draw
 
 secondInterval = Segundo intervalo
 
@@ -866,6 +915,7 @@ tab.section              = Se\u00E7\u00E3o
 tab.visualization        = Visual analytic
 
 tabs.ACTIVITY_COMPLETION = Visual analytic - Activity Completion
+tabs.FORUM               = Forums
 tabs.GRADES              = Visual analytic - Grades
 tabs.LOGS                = Visual analytic - Logs
 tabs.RISK                = Risk of dropping out
@@ -943,6 +993,8 @@ tooltip.lastconnection   = \u00DAltimo acesso
 tooltip.rol              = Rol
 
 tooltipDecimals = decimal dica
+
+usePhoto = Use photos
 
 useQuartile = Com quartis
 
