--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -1,6 +1,8 @@
 
 ACTIVITIES_TABLE = Compleci\u00F3 de l'activitat
 
+BARNES_HUT = Barnes Hut
+
 BOXPLOT = Diagramacaja
 
 BOXPLOT.xAxisTitle          = Els elements de qualificaci\u00F3
@@ -38,7 +40,12 @@ CUM_LINE.yAxisTitle = Registres
 
 Days = Dies
 
+FORCE_ATLAS_2_BASED = Force Atlas 2
+
 FORUM_BAR = Bars
+
+FORUM_BAR.xAxisTitle = Posts
+FORUM_BAR.yAxisTitle = Forums
 
 FORUM_NETWORK = Graph
 
@@ -65,6 +72,8 @@ MEAN_DIFF.xAxisTitle = {0}
 MEAN_DIFF.yAxisTitle = Registres
 
 RADAR = Radar
+
+REPULSION = Repulsion
 
 RISK_BAR = Compared risk
 
@@ -191,6 +200,10 @@ displayXScaleTitle = T\u00EDtol de l'eix X
 
 displayYScaleTitle = T\u00EDtol de l'eix I
 
+edges.dashes      = Edges -> Dashes
+edges.scaling.max = Edges -> Scaling -> Max
+edges.scaling.min = Edges -> Scaling -> Min
+
 emptyGradeColor = El color de grau buida
 
 error = Error
@@ -250,6 +263,11 @@ initialLastActivity = \u00DAltimes connexions
 initialRoles = Els rols inicials
 
 initialTypeTimes = unitat de temps predeterminat
+
+interaction.keyboard          = Interaction -> Keyboard
+interaction.multiselect       = Interaction -> Multiselect
+interaction.navigationButtons = Interaction -> Navigation buttons
+interaction.tooltipDelay      = Interaction -> Tooltip delay
 
 label.activities                  = # activity completion items
 label.categoryitem                = Categoria / article:
@@ -311,6 +329,9 @@ label.user                        = Usuari:
 label.welcome                     = Benvinguda
 label.withcompletion              = Completed Act.
 label.withhidden                  = Amb ocults
+
+layout.clusterThreshold = Layout -> Cluster threshold
+layout.randomSeed       = Layout -> Random seed
 
 legendActive = Llegenda de l'gr\u00E0fic
 
@@ -845,9 +866,37 @@ module.workshop        = Taller
 
 moreMax = M\u00E0xim
 
+nodes.borderWidth = Nodes -> Border width
+nodes.scaling.max = Nodes -> Scaling -> Max
+nodes.scaling.min = Nodes -> Scaling -> Min
+
 notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
 
 passGradeColor = Passant el color de grau
+
+physics.barnesHut.avoidOverlap                 = Physics -> Barnes Hut -> Avoid overlap [0.0, 1.0]
+physics.barnesHut.centralGravity               = Physics -> Barnes Hut -> Central gravity
+physics.barnesHut.damping                      = Physics -> Barnes Hut -> Avoid overlap [0.0, 1.0]
+physics.barnesHut.gravitationalConstant        = Physics -> Barnes Hut -> Gravitational constant
+physics.barnesHut.springConstant               = Physics -> Barnes hut -> Spring constant
+physics.barnesHut.springLength                 = Physics -> Barnes Hut -> Spring length
+physics.barnesHut.theta                        = Physics -> Barnes Hut -> Theta
+physics.forceAtlas2Based.avoidOverlap          = Physics -> Force Atlas 2 -> Avoid overlap [0.0, 1.0]
+physics.forceAtlas2Based.centralGravity        = Physics -> Force Atlas 2 -> Central gravity
+physics.forceAtlas2Based.damping               = Physics -> Force Atlas 2 -> Avoid overlap [0.0, 1.0]
+physics.forceAtlas2Based.gravitationalConstant = Physics -> Force Atlas 2 -> Gravitational constant
+physics.forceAtlas2Based.springConstant        = Physics -> Force Atlas 2 -> Spring constant
+physics.forceAtlas2Based.springLength          = Physics -> Force Atlas 2 -> Spring length
+physics.forceAtlas2Based.theta                 = Physics -> Force Atlas 2 -> Theta
+physics.repulsion.centralGravity               = Physics -> Repulsion -> Central gravity
+physics.repulsion.damping                      = Physics -> Repulsion -> Avoid overlap [0.0, 1.0]
+physics.repulsion.nodeDistance                 = Physics -> Repulsion -> Node distance
+physics.repulsion.springConstant               = Physics -> Repulsion -> Spring constant
+physics.repulsion.springLength                 = Physics -> Repulsion -> Spring length
+physics.solver                                 = Physics -> Solver
+physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Spring constant
+
+physicsAfterDraw = Enable physics after draw
 
 secondInterval = segon interval
 
@@ -866,6 +915,7 @@ tab.section              = Secci\u00F3
 tab.visualization        = Visual analytic
 
 tabs.ACTIVITY_COMPLETION = Visual analytic - Activity Completion
+tabs.FORUM               = Forums
 tabs.GRADES              = Visual analytic - Grade
 tabs.LOGS                = Visual analytic - Logs
 tabs.RISK                = Risk of dropping out
@@ -943,6 +993,8 @@ tooltip.lastconnection   = \u00DAltim acc\u00E9s
 tooltip.rol              = Rol
 
 tooltipDecimals = informaci\u00F3 sobre eines decimal
+
+usePhoto = Use photos
 
 useQuartile = Cmb quartils
 
