--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -1,6 +1,8 @@
 
 ACTIVITIES_TABLE = Aktivit\u00E4tsabschluss
 
+BARNES_HUT = Barnes Hut
+
 BOXPLOT = BoxPlot
 
 BOXPLOT.xAxisTitle          = Grade Artikel
@@ -38,7 +40,12 @@ CUM_LINE.yAxisTitle = Logs
 
 Days = Tage
 
+FORCE_ATLAS_2_BASED = Force Atlas 2
+
 FORUM_BAR = Bars
+
+FORUM_BAR.xAxisTitle = Posts
+FORUM_BAR.yAxisTitle = Forums
 
 FORUM_NETWORK = Graph
 
@@ -65,6 +72,8 @@ MEAN_DIFF.xAxisTitle = {0}
 MEAN_DIFF.yAxisTitle = Logs
 
 RADAR = Radar
+
+REPULSION = Repulsion
 
 RISK_BAR = Compared risk
 
@@ -191,6 +200,10 @@ displayXScaleTitle = Titel X-Achse
 
 displayYScaleTitle = Titel der Y-Achse
 
+edges.dashes      = Edges -> Dashes
+edges.scaling.max = Edges -> Scaling -> Max
+edges.scaling.min = Edges -> Scaling -> Max
+
 emptyGradeColor = Farbe leer Grad
 
 error = Error
@@ -250,6 +263,11 @@ initialLastActivity = Letzte Verbindungen
 initialRoles = Erste Rollen
 
 initialTypeTimes = Standardzeiteinheit
+
+interaction.keyboard          = Interaction -> Keyboard
+interaction.multiselect       = Interaction -> Multiselect
+interaction.navigationButtons = Interaction -> Navigation buttons
+interaction.tooltipDelay      = Interaction -> Tooltip delay
 
 label.activities                  = # activity completion items
 label.categoryitem                = Kategorie / Gegenstand:
@@ -311,6 +329,9 @@ label.user                        = Nutzername:
 label.welcome                     = Herzlich willkommen
 label.withcompletion              = Completed Act.
 label.withhidden                  = Mit verstecktem
+
+layout.clusterThreshold = Layout -> Cluster threshold
+layout.randomSeed       = Layout -> Random seed
 
 legendActive = Diagrammlegende
 
@@ -845,9 +866,37 @@ module.workshop        = Werkstatt
 
 moreMax = Maximal
 
+nodes.borderWidth = Nodes -> Border width
+nodes.scaling.max = Nodes -> Scaling -> Max
+nodes.scaling.min = Nodes -> Scaling -> Min
+
 notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
 
 passGradeColor = Passing Grad Farbe
+
+physics.barnesHut.avoidOverlap                 = Physics -> Barnes hut -> Avoid overlap [0.0, 1.0]
+physics.barnesHut.centralGravity               = Physics -> Barnes hut -> Central gravity
+physics.barnesHut.damping                      = Physics -> Barnes hut -> Avoid overlap [0.0, 1.0]
+physics.barnesHut.gravitationalConstant        = Physics -> Barnes hut -> Gravitational constant
+physics.barnesHut.springConstant               = Physics -> Barnes hut -> Spring constant
+physics.barnesHut.springLength                 = Physics -> Barnes hut -> Spring length
+physics.barnesHut.theta                        = Physics -> Barnes hut -> Theta
+physics.forceAtlas2Based.avoidOverlap          = Physics -> Barnes hut -> Avoid overlap [0.0, 1.0]
+physics.forceAtlas2Based.centralGravity        = Physics -> Force Atlas 2 -> Central gravity
+physics.forceAtlas2Based.damping               = Physics -> Force Atlas 2 -> Avoid overlap [0.0, 1.0]
+physics.forceAtlas2Based.gravitationalConstant = Physics -> Barnes hut -> Gravitational constant
+physics.forceAtlas2Based.springConstant        = Physics -> Force Atlas 2 -> Spring constant
+physics.forceAtlas2Based.springLength          = Physics -> Force Atlas 2 -> Spring length
+physics.forceAtlas2Based.theta                 = Physics -> Force Atlas 2 -> Theta
+physics.repulsion.centralGravity               = Physics -> Repulsion -> Central gravity
+physics.repulsion.damping                      = Physics -> Force Atlas 2 -> Avoid overlap [0.0, 1.0]
+physics.repulsion.nodeDistance                 = Physics -> Repulsion -> Node distance
+physics.repulsion.springConstant               = Physics -> Repulsion -> Spring constant
+physics.repulsion.springLength                 = Physics -> Repulsion -> Spring length
+physics.solver                                 = Physics -> Solver
+physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Spring constant
+
+physicsAfterDraw = Enable physics after draw
 
 secondInterval = Sekunden-Intervall
 
@@ -866,6 +915,7 @@ tab.section              = Abschnitt
 tab.visualization        = Visual analytic
 
 tabs.ACTIVITY_COMPLETION = Visual analytic - Activity Completion
+tabs.FORUM               = Forums
 tabs.GRADES              = Visual analytic - Grades
 tabs.LOGS                = Visual analytic - Logs
 tabs.RISK                = Risk of dropping out
@@ -943,6 +993,8 @@ tooltip.lastconnection   = Letzter Zugriff:
 tooltip.rol              = Rol
 
 tooltipDecimals = dezimal Tooltip
+
+usePhoto = Use photos
 
 useQuartile = Mit Quartile
 
