--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1,6 +1,8 @@
 
 ACTIVITIES_TABLE = Activity Completion
 
+BARNES_HUT = Barnes Hut
+
 BOXPLOT = Boxplot
 
 BOXPLOT.xAxisTitle          = Grade items
@@ -38,7 +40,12 @@ CUM_LINE.yAxisTitle = Logs
 
 Days = Days
 
+FORCE_ATLAS_2_BASED = Force Atlas 2
+
 FORUM_BAR = Bars
+
+FORUM_BAR.xAxisTitle = Posts
+FORUM_BAR.yAxisTitle = Forums
 
 FORUM_NETWORK = Graph
 
@@ -65,6 +72,8 @@ MEAN_DIFF.xAxisTitle = {0}
 MEAN_DIFF.yAxisTitle = Logs
 
 RADAR = Radar
+
+REPULSION = Repulsion
 
 RISK_BAR = Compared risk
 
@@ -263,6 +272,10 @@ displayXScaleTitle = Title X-axis
 
 displayYScaleTitle = Title Y-axis
 
+edges.dashes      = Edges -> Dashes
+edges.scaling.max = Edges -> Scaling -> Max
+edges.scaling.min = Edges -> Scaling -> Min
+
 emptyGradeColor = Color empty grade
 
 error = Error
@@ -322,6 +335,11 @@ initialLastActivity = Last connections
 initialRoles = Initial Roles
 
 initialTypeTimes = Default time unit
+
+interaction.keyboard          = Interaction -> Keyboard
+interaction.multiselect       = Interaction -> Multiselect
+interaction.navigationButtons = Interaction -> Navigation buttons
+interaction.tooltipDelay      = Interaction -> Tooltip delay
 
 label.activities                  = # activity completion items
 label.categoryitem                = Category/Item:
@@ -383,6 +401,9 @@ label.user                        = User:
 label.welcome                     = Welcome
 label.withcompletion              = Completed Act.
 label.withhidden                  = With hidden
+
+layout.clusterThreshold = Layout -> Cluster threshold
+layout.randomSeed       = Layout -> Random seed
 
 legendActive = Chart legend
 
@@ -917,9 +938,37 @@ module.workshop        = Workshop
 
 moreMax = Maximum
 
+nodes.borderWidth = Nodes -> Border width
+nodes.scaling.max = Nodes -> Scaling -> Max
+nodes.scaling.min = Nodes -> Scaling -> Min
+
 notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
 
 passGradeColor = Passing grade color
+
+physics.barnesHut.avoidOverlap                 = Physics -> Barnes Hut -> Avoid overlap [0.0, 1.0]
+physics.barnesHut.centralGravity               = Physics -> Barnes Hut -> Central gravity
+physics.barnesHut.damping                      = Physics -> Barnes Hut -> Avoid overlap [0.0, 1.0]
+physics.barnesHut.gravitationalConstant        = Physics -> Barnes Hut -> Gravitational constant
+physics.barnesHut.springConstant               = Physics -> Barnes hut -> Spring constant
+physics.barnesHut.springLength                 = Physics -> Barnes Hut -> Spring length
+physics.barnesHut.theta                        = Physics -> Barnes Hut -> Theta
+physics.forceAtlas2Based.avoidOverlap          = Physics -> Force Atlas 2 -> Avoid overlap [0.0, 1.0]
+physics.forceAtlas2Based.centralGravity        = Physics -> Force Atlas 2 -> Central gravity
+physics.forceAtlas2Based.damping               = Physics -> Force Atlas 2 -> Avoid overlap [0.0, 1.0]
+physics.forceAtlas2Based.gravitationalConstant = Physics -> Force Atlas 2 -> Gravitational constant
+physics.forceAtlas2Based.springConstant        = Physics -> Force Atlas 2 -> Spring constant
+physics.forceAtlas2Based.springLength          = Physics -> Force Atlas 2 -> Spring length
+physics.forceAtlas2Based.theta                 = Physics -> Force Atlas 2 -> Theta
+physics.repulsion.centralGravity               = Physics -> Repulsion -> Central gravity
+physics.repulsion.damping                      = Physics -> Repulsion -> Avoid overlap [0.0, 1.0]
+physics.repulsion.nodeDistance                 = Physics -> Repulsion -> Node distance
+physics.repulsion.springConstant               = Physics -> Repulsion -> Spring constant
+physics.repulsion.springLength                 = Physics -> Repulsion -> Spring length
+physics.solver                                 = Physics -> Solver
+physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Spring constant
+
+physicsAfterDraw = Enable physics after draw
 
 secondInterval = Second interval
 
@@ -938,6 +987,7 @@ tab.section              = Sections
 tab.visualization        = Visual analytic
 
 tabs.ACTIVITY_COMPLETION = Visual analytic - Activity Completion
+tabs.FORUM               = Forums
 tabs.GRADES              = Visual analytic - Grades
 tabs.LOGS                = Visual analytic - Logs
 tabs.RISK                = Risk of dropping out
@@ -1015,6 +1065,8 @@ tooltip.lastconnection   = Last access
 tooltip.rol              = Role
 
 tooltipDecimals = Decimal tooltip
+
+usePhoto = Use photos
 
 useQuartile = With quartiles
 
