--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -1,6 +1,8 @@
 
 ACTIVITIES_TABLE = Ach\u00E8vement d'activit\u00E9s
 
+BARNES_HUT = Barnes Hut
+
 BOXPLOT = Boxplot
 
 BOXPLOT.xAxisTitle          = Articles de grade
@@ -38,7 +40,12 @@ CUM_LINE.yAxisTitle = Journaux
 
 Days = Journ\u00E9es
 
+FORCE_ATLAS_2_BASED = Force Atlas 2
+
 FORUM_BAR = Bars
+
+FORUM_BAR.xAxisTitle = Posts
+FORUM_BAR.yAxisTitle = Forums
 
 FORUM_NETWORK = Graph
 
@@ -65,6 +72,8 @@ MEAN_DIFF.xAxisTitle = {0}
 MEAN_DIFF.yAxisTitle = Journaux
 
 RADAR = Radar
+
+REPULSION = Repulsion
 
 RISK_BAR = Compared risk
 
@@ -191,6 +200,10 @@ displayXScaleTitle = Titre de l'axe X
 
 displayYScaleTitle = Titre de l'axe Y
 
+edges.dashes      = Edges -> Dashes
+edges.scaling.max = Edges -> Scaling -> Max
+edges.scaling.min = Edges -> Scaling -> Min
+
 emptyGradeColor = Couleur qualit\u00E9 vide
 
 error = Error
@@ -250,6 +263,11 @@ initialLastActivity = connexions derni\u00E8res
 initialRoles = Le r\u00F4le initial
 
 initialTypeTimes = unit\u00E9 de temps par d\u00E9faut
+
+interaction.keyboard          = Interaction -> Keyboard
+interaction.multiselect       = Interaction -> Multiselect
+interaction.navigationButtons = Interaction -> Navigation buttons
+interaction.tooltipDelay      = Interaction -> Tooltip delay
 
 label.activities                  = # activity completion items
 label.categoryitem                = Cat\u00E9gorie / article:
@@ -311,6 +329,9 @@ label.user                        = Utilisateur:
 label.welcome                     = Bienvenue
 label.withcompletion              = Completed Act.
 label.withhidden                  = Avec cach\u00E9
+
+layout.clusterThreshold = Layout -> Cluster threshold
+layout.randomSeed       = Layout -> Random seed
 
 legendActive = Graphique l\u00E9gende
 
@@ -845,9 +866,37 @@ module.workshop        = Atelier
 
 moreMax = Maximum
 
+nodes.borderWidth = Nodes -> Border width
+nodes.scaling.max = Nodes -> Scaling -> Max
+nodes.scaling.min = Nodes -> Scaling -> Min
+
 notificationLoginSSO = Single Sign-On (SSO) login using previous credentials to encrypt/decrypt cache.
 
 passGradeColor = En passant la couleur de qualit\u00E9
+
+physics.barnesHut.avoidOverlap                 = Physics -> Barnes Hut -> Avoid overlap [0.0, 1.0]
+physics.barnesHut.centralGravity               = Physics -> Barnes Hut -> Central gravity
+physics.barnesHut.damping                      = Physics -> Barnes Hut -> Avoid overlap [0.0, 1.0]
+physics.barnesHut.gravitationalConstant        = Physics -> Barnes Hut -> Gravitational constant
+physics.barnesHut.springConstant               = Physics -> Barnes hut -> Spring constant
+physics.barnesHut.springLength                 = Physics -> Barnes Hut -> Spring length
+physics.barnesHut.theta                        = Physics -> Barnes Hut -> Theta
+physics.forceAtlas2Based.avoidOverlap          = Physics -> Force Atlas 2 -> Avoid overlap [0.0, 1.0]
+physics.forceAtlas2Based.centralGravity        = Physics -> Force Atlas 2 -> Central gravity
+physics.forceAtlas2Based.damping               = Physics -> Force Atlas 2 -> Avoid overlap [0.0, 1.0]
+physics.forceAtlas2Based.gravitationalConstant = Physics -> Force Atlas 2 -> Gravitational constant
+physics.forceAtlas2Based.springConstant        = Physics -> Force Atlas 2 -> Spring constant
+physics.forceAtlas2Based.springLength          = Physics -> Force Atlas 2 -> Spring length
+physics.forceAtlas2Based.theta                 = Physics -> Force Atlas 2 -> Theta
+physics.repulsion.centralGravity               = Physics -> Repulsion -> Central gravity
+physics.repulsion.damping                      = Physics -> Repulsion -> Avoid overlap [0.0, 1.0]
+physics.repulsion.nodeDistance                 = Physics -> Repulsion -> Node distance
+physics.repulsion.springConstant               = Physics -> Repulsion -> Spring constant
+physics.repulsion.springLength                 = Physics -> Repulsion -> Spring length
+physics.solver                                 = Physics -> Solver
+physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Spring constant
+
+physicsAfterDraw = Enable physics after draw
 
 secondInterval = deuxi\u00E8me intervalle
 
@@ -866,6 +915,7 @@ tab.section              = Section
 tab.visualization        = Visual analytic
 
 tabs.ACTIVITY_COMPLETION = Visual analytic - Activity Completion
+tabs.FORUM               = Forums
 tabs.GRADES              = Visual analytic - Grades
 tabs.LOGS                = Visual analytic - Logs
 tabs.RISK                = Risk of dropping out
@@ -943,6 +993,8 @@ tooltip.lastconnection   = Dernier acc\u00E8s
 tooltip.rol              = Rol
 
 tooltipDecimals = infobulle d\u00E9cimal
+
+usePhoto = Use photos
 
 useQuartile = Cvec quartiles
 
