Added calendar events, refactorized multiples classes

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -973,6 +973,7 @@ physicsAfterDraw = Enable physics after draw
 secondInterval = Second interval
 
 tab.activityCompletion   = Activity Completion
+tab.calendarevent        = Calendar events
 tab.clustering           = Clustering
 tab.component            = Components
 tab.coursemodule         = Course Modules
