--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -150,7 +150,7 @@ button.logout    = Cerrar sesi\u00F3n
 button.restore   = Restaurar valores por defecto
 button.save      = Guardar
 button.search    = Buscar
-button.selectall = Seleccionar todos
+button.selectall = Selecc. todos
 
 calculateMax = Calcular m\u00E1ximo
 
@@ -338,7 +338,7 @@ initialTypeTimes = Unidad de tiempo predeterminado
 
 interaction.keyboard          = Interacci\u00F3n -> Teclado
 interaction.multiselect       = Interacci\u00F3n -> Multiselecci\u00F3n
-interaction.navigationButtons = Interaction -> Botones de navegaci\u00F3n
+interaction.navigationButtons = Interacci\u00F3n -> Botones de navegaci\u00F3n
 interaction.tooltipDelay      = Interacci\u00F3n -> Retardo tooltip
 
 label.activities                  = # items de finalizaci\u00F3n de actividad
@@ -938,7 +938,7 @@ module.workshop        = Taller
 
 moreMax = M\u00E1ximo
 
-nodes.borderWidth = Nodos -> 
+nodes.borderWidth = Nodos -> Ancho borde
 nodes.scaling.max = Nodos -> Escalado -> M\u00E1x.
 nodes.scaling.min = Nodos -> Escalado -> M\u00EDn.
 
@@ -962,17 +962,18 @@ physics.forceAtlas2Based.springLength          = F\u00EDsica -> Force Atlas 2 ->
 physics.forceAtlas2Based.theta                 = F\u00EDsica -> Force Atlas 2 -> Theta
 physics.repulsion.centralGravity               = F\u00EDsica -> Repulsi\u00F3n -> Gravedad central
 physics.repulsion.damping                      = F\u00EDsica -> Repulsi\u00F3n -> Evitar solapamiento [0.0, 1.0]
-physics.repulsion.nodeDistance                 = Physics -> Repulsi\u00F3n -> Distancia del nodo
-physics.repulsion.springConstant               = Physics -> Repulsi\u00F3n ->  Constante del muelle
+physics.repulsion.nodeDistance                 = F\u00EDsica -> Repulsi\u00F3n -> Distancia del nodo
+physics.repulsion.springConstant               = F\u00EDsica -> Repulsi\u00F3n ->  Constante del muelle
 physics.repulsion.springLength                 = F\u00EDsica -> Repulsi\u00F3n -> Longitud del muelle
 physics.solver                                 = F\u00EDsica -> Algoritmo
 physics.springLength.springConstant            = Physics -> Force Atlas 2 -> Constante del muelle
 
-physicsAfterDraw = Habilitar la f\u00EDsica despu\u00E9s de dibujar\r\n
+physicsAfterDraw = Habilitar la f\u00EDsica despu\u00E9s de dibujar
 
 secondInterval = Segundo intervalo
 
 tab.activityCompletion   = Finalizaci\u00F3n Actividad
+tab.calendarevent        = Eventos calendario
 tab.clustering           = Clustering
 tab.component            = Componentes
 tab.coursemodule         = M\u00F3dulos curso
