--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -901,6 +901,7 @@ physicsAfterDraw = Enable physics after draw
 secondInterval = deuxi\u00E8me intervalle
 
 tab.activityCompletion   = Ach\u00E8vement d'activit\u00E9s
+tab.calendarevent        = Calendar events
 tab.clustering           = Clustering
 tab.component            = Composants
 tab.coursemodule         = Modules de cours
