--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -901,6 +901,7 @@ physicsAfterDraw = Enable physics after draw
 secondInterval = Secondo intervallo
 
 tab.activityCompletion   = Completamento attivit\u00E0
+tab.calendarevent        = Calendar events
 tab.clustering           = Clustering
 tab.component            = componenti
 tab.coursemodule         = Moduli del corso
