--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -901,6 +901,7 @@ physicsAfterDraw = Enable physics after draw
 secondInterval = Segundo intervalo
 
 tab.activityCompletion   = Conclus\u00E3o das atividades
+tab.calendarevent        = Calendar events
 tab.clustering           = Clustering
 tab.component            = Componentes
 tab.coursemodule         = M\u00F3dulos do curso
