--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -901,6 +901,7 @@ physicsAfterDraw = Enable physics after draw
 secondInterval = segon interval
 
 tab.activityCompletion   = Compleci\u00F3 de l'activitat
+tab.calendarevent        = Calendar events
 tab.clustering           = Clustering
 tab.component            = Components
 tab.coursemodule         = M\u00F2duls del curs
