--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -901,6 +901,7 @@ physicsAfterDraw = Enable physics after draw
 secondInterval = Sekunden-Intervall
 
 tab.activityCompletion   = Aktivit\u00E4tsabschluss
+tab.calendarevent        = Calendar events
 tab.clustering           = Clustering
 tab.component            = Komponenten
 tab.coursemodule         = Kursmodule
