--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -28,6 +28,8 @@ BUBBLE_LOGARITHMIC = Engagement (Log.)
 BUBBLE_LOGARITHMIC.xAxisTitle = Time after the last access to the Course until {0}
 BUBBLE_LOGARITHMIC.yAxisTitle = Time after the last access to Moodle until {0}
 
+CALENDAR_EVENT_TIMELINE = Timeline
+
 CALIFICATION_BAR = Grades %
 
 CALIFICATION_BAR.xAxisTitle = Grade items
@@ -272,9 +274,10 @@ displayXScaleTitle = Title X-axis
 
 displayYScaleTitle = Title Y-axis
 
-edges.dashes      = Edges -> Dashes
-edges.scaling.max = Edges -> Scaling -> Max
-edges.scaling.min = Edges -> Scaling -> Min
+edges.arrows.to.scaleFactor = Edges -> Arrows -> Scale factor
+edges.dashes                = Edges -> Dashes
+edges.scaling.max           = Edges -> Scaling -> Max
+edges.scaling.min           = Edges -> Scaling -> Min
 
 emptyGradeColor = Color empty grade
 
@@ -1006,6 +1009,7 @@ text.coursemodule        = Course Module
 text.coursename          = Archive course
 text.coursenametextfield = Archived filename
 text.datetime            = Date and time
+text.daydifference       = <p>{2}Time elapsed: {0, choice, 0#Zero days|1#one day|1<{0} days}{1,choice,0#|1# and one hour|1< and {1} hours}</p> {3}
 text.days                = Days
 text.empty               = N.A
 text.event               = Event
@@ -1066,6 +1070,8 @@ tooltip.lastconnection   = Last access
 tooltip.rol              = Role
 
 tooltipDecimals = Decimal tooltip
+
+useInitialNames = Use initials of names
 
 usePhoto = Use photos
 
