--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -28,6 +28,8 @@ BUBBLE_LOGARITHMIC = Compromiso (Log.)
 BUBBLE_LOGARITHMIC.xAxisTitle = Tiempo transcurrido del \u00FAltimo acceso al Curso hasta {0}
 BUBBLE_LOGARITHMIC.yAxisTitle = Tiempo transcurrido del \u00FAltimo acceso a Moodle hasta {0}
 
+CALENDAR_EVENT_TIMELINE = L\u00EDnea de tiempo
+
 CALIFICATION_BAR = Calificaciones %
 
 CALIFICATION_BAR.xAxisTitle = \u00CDtems de calificaci\u00F3n
@@ -272,9 +274,10 @@ displayXScaleTitle = T\u00EDtulo del eje X
 
 displayYScaleTitle = T\u00EDtulo del eje Y
 
-edges.dashes      = Aristas -> Guiones
-edges.scaling.max = Aristas -> Escalado -> M\u00E1x.
-edges.scaling.min = Aristas -> Escalado -> M\u00EDn.
+edges.arrows.to.scaleFactor = Aristas -> Flechas -> Factor de escala
+edges.dashes                = Aristas -> Guiones
+edges.scaling.max           = Aristas -> Escalado -> M\u00E1x.
+edges.scaling.min           = Aristas -> Escalado -> M\u00EDn.
 
 emptyGradeColor = Color de calificaci\u00F3n vac\u00EDa
 
@@ -957,7 +960,7 @@ physics.forceAtlas2Based.avoidOverlap          = F\u00EDsica -> Force Atlas 2 ->
 physics.forceAtlas2Based.centralGravity        = F\u00EDsica -> Force Atlas 2 -> Gravedad central
 physics.forceAtlas2Based.damping               = F\u00EDsica -> Force Atlas 2 -> Evitar solapamiento [0.0, 1.0]
 physics.forceAtlas2Based.gravitationalConstant = F\u00EDsica -> Force Atlas 2 -> Constante gravitacional
-physics.forceAtlas2Based.springConstant        = Physics -> Force Atlas 2 -> Constante del muelle
+physics.forceAtlas2Based.springConstant        = F\u00EDsica -> Force Atlas 2 -> Constante del muelle
 physics.forceAtlas2Based.springLength          = F\u00EDsica -> Force Atlas 2 -> Longitud del muelle
 physics.forceAtlas2Based.theta                 = F\u00EDsica -> Force Atlas 2 -> Theta
 physics.repulsion.centralGravity               = F\u00EDsica -> Repulsi\u00F3n -> Gravedad central
@@ -973,7 +976,7 @@ physicsAfterDraw = Habilitar la f\u00EDsica despu\u00E9s de dibujar
 secondInterval = Segundo intervalo
 
 tab.activityCompletion   = Finalizaci\u00F3n Actividad
-tab.calendarevent        = Eventos calendario
+tab.calendarevent        = Eventos de calendario
 tab.clustering           = Clustering
 tab.component            = Componentes
 tab.coursemodule         = M\u00F3dulos curso
@@ -1006,6 +1009,7 @@ text.coursemodule        = M\u00F3dulo del curso
 text.coursename          = Archivar curso
 text.coursenametextfield = Nombre de fichero a archivar
 text.datetime            = Fecha y hora
+text.daydifference       = <p>{2}Tiempo transcurrido: {0, choice, 0#Cero d\u00EDas|1#un d\u00EDa|1<{0} d\u00EDas}{1,choice,0#|1# y una hora|1< y {1} horas}</p> {3}
 text.days                = d\u00EDas
 text.empty               = S.C
 text.event               = Evento
@@ -1066,6 +1070,8 @@ tooltip.lastconnection   = \u00DAltimo acceso
 tooltip.rol              = Rol
 
 tooltipDecimals = Informaci\u00F3n de decimales
+
+useInitialNames = Usar iniciales de nombres
 
 usePhoto = Usar fotos
 
