--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -28,6 +28,8 @@ BUBBLE_LOGARITHMIC = Engagement (Log.)
 BUBBLE_LOGARITHMIC.xAxisTitle = Time after the last access to the Course until {0}
 BUBBLE_LOGARITHMIC.yAxisTitle = Time after the last access to Moodle until {0}
 
+CALENDAR_EVENT_TIMELINE = Timeline
+
 CALIFICATION_BAR = Grades %
 
 CALIFICATION_BAR.xAxisTitle = Articles de grade
@@ -200,9 +202,10 @@ displayXScaleTitle = Titre de l'axe X
 
 displayYScaleTitle = Titre de l'axe Y
 
-edges.dashes      = Edges -> Dashes
-edges.scaling.max = Edges -> Scaling -> Max
-edges.scaling.min = Edges -> Scaling -> Min
+edges.arrows.to.scaleFactor = Edges -> Arrows -> Scale factor
+edges.dashes                = Edges -> Dashes
+edges.scaling.max           = Edges -> Scaling -> Max
+edges.scaling.min           = Edges -> Scaling -> Min
 
 emptyGradeColor = Couleur qualit\u00E9 vide
 
@@ -934,6 +937,7 @@ text.coursemodule        = Course Module
 text.coursename          = Archive course
 text.coursenametextfield = Archived filename
 text.datetime            = Date and time
+text.daydifference       = <p>{2}Time elapsed: {0, choice, 0#Zero days|1#one day|1<{0} days}{1,choice,0#|1# and one hour|1< and {1} hours}</p> {3}
 text.days                = Journ\u00E9es
 text.empty               = N.A
 text.event               = Event
@@ -994,6 +998,8 @@ tooltip.lastconnection   = Dernier acc\u00E8s
 tooltip.rol              = Rol
 
 tooltipDecimals = infobulle d\u00E9cimal
+
+useInitialNames = Use initials of names
 
 usePhoto = Use photos
 
